@@ -1,0 +1,22 @@
+// Copyright (c) 2001, 2004, 2005  Per M.A. Bothner
+// This is free software;  for terms and warranty disclaimer see ./COPYING.
+
+package gnu.kawa.lispexpr;
+import gnu.expr.*;
+import gnu.mapping.*;
+
+public abstract class LispLanguage extends LispInterpreter
+{
+  /** Convert the Language's idea of a symbol to a gnu.mapping.Symbol. */
+  public static Symbol langSymbolToSymbol (Object sym)
+  {
+    return ((LispLanguage) Language.getDefaultLanguage()).fromLangSymbol(sym);
+  }
+
+  protected Symbol fromLangSymbol (Object sym)
+  {
+    if (sym instanceof String)
+      return getSymbol((String) sym);
+    return (Symbol) sym;
+  }
+}
