@@ -1,3 +1,11 @@
+2005-01-29  Per Bothner  <per@bothner.com>
+
+	* LispLanguage.java: New class; temporarily extends LispInterpreter.
+	* Makefile.am (java_sources): Add LispLanguage.java.
+
+	* LispLanguage.java (langSymbolToSymbol): New staic method.
+	(fromLangSymbol): New protected method.
+
 2005-01-21  Per Bothner  <per@bothner.com>
 
 	* LispInterpreter.java: Inherit from Language rather than Interpreter.
